@@ -62,16 +62,11 @@
 #include "apr_strings.h"
 #include "apr_lib.h"
 
-/** default parser configuration */
-
-static const apreq_cfg_t default_cfg = {
-    1024 * 1024, /**< limit on POST data size */
-    1024 * 256,  /**< limit on brigade size */
-    200,         /**< maximum number of form fields */
-    1024 * 64    /**< maximum amount of prefetch data */
-};
+#define MAX_LEN         (1024 * 1024)
+#define MAX_BRIGADE_LEN (1024 * 256)
+#define MAX_FIELDS      (200)
+#define READ_AHEAD      (1024 * 64)
     
-
 APREQ_DECLARE(apreq_param_t *) apreq_make_param(apr_pool_t *p, 
                                                 const char *name, 
                                                 const apr_size_t nlen, 
@@ -98,8 +93,17 @@ APREQ_DECLARE(apreq_param_t *) apreq_make_param(apr_pool_t *p,
 APREQ_DECLARE(apreq_request_t *) apreq_request(void *env, const char *qs)
 {
     apreq_request_t *req;
+    apreq_cfg_t *cfg;
     apr_pool_t *p;
     apr_status_t s;
+
+    /** default parser configuration */
+    static const apreq_cfg_t default_cfg = {
+        MAX_LEN, /**< limit on POST data size */
+        MAX_BRIGADE_LEN,  /**< limit on brigade size */
+        MAX_FIELDS,         /**< maximum number of form fields */
+        READ_AHEAD    /**< maximum amount of prefetch data */
+    };
 
     if (qs == NULL) {
         apreq_request_t *old_req = apreq_env_request(env,NULL);
@@ -116,7 +120,6 @@ APREQ_DECLARE(apreq_request_t *) apreq_request(void *env, const char *qs)
         req->body     = NULL;
         req->parser   = apreq_parser(env, NULL);
 
-        *req->cfg = default_cfg;
         /* XXX need to install copy/merge callbacks for apreq_param_t */
 
         /* XXX get/set race condition here wrt apreq_env_request? */
@@ -138,9 +141,10 @@ APREQ_DECLARE(apreq_request_t *) apreq_request(void *env, const char *qs)
         req->body     = NULL;
         req->parser   = apreq_parser(env, NULL);
 
-        *req->cfg = default_cfg;
         /* XXX need to install copy/merge callbacks for apreq_param_t */ 
     }
+
+    *req->cfg = default_cfg;
 
     s = (qs == NULL) ? APR_SUCCESS : 
         apreq_parse_query_string(p, req->args, qs);
@@ -158,10 +162,8 @@ APREQ_DECLARE(apreq_param_t *)apreq_param(const apreq_request_t *req,
         val = apr_table_get(req->body, name);
 
     if (val == NULL) {
-        apreq_cfg_t *cfg = req->cfg;
-
-        if (cfg && cfg->read_ahead) {
-            apreq_env_read(req->env, APR_BLOCK_READ, cfg->read_ahead);
+        if (req->cfg->read_ahead) {
+            apreq_env_read(req->env, APR_BLOCK_READ, req->cfg->read_ahead);
             if (req->body)
                 val = apr_table_get(req->body, name);
         }
@@ -173,6 +175,12 @@ APREQ_DECLARE(apreq_param_t *)apreq_param(const apreq_request_t *req,
 APREQ_DECLARE(apr_table_t *) apreq_params(apr_pool_t *pool,
                                           const apreq_request_t *req)
 {
+    if (req->cfg->read_ahead) {
+        apr_status_t s;
+        do s = apreq_env_read(req->env, APR_BLOCK_READ, req->cfg->read_ahead);
+        while (s == APR_INCOMPLETE);
+    }
+
     return req->body ? apr_table_overlay(pool, req->args, req->body) :
         apr_table_copy(pool, req->args);
 }
@@ -314,6 +322,12 @@ APREQ_DECLARE(apr_table_t *) apreq_uploads(apr_pool_t *pool,
                                            const apreq_request_t *req)
 {
     apr_table_t *t;
+    if (req->cfg->read_ahead) {
+        apr_status_t s;
+        do s = apreq_env_read(req->env, APR_BLOCK_READ, req->cfg->read_ahead);
+        while (s == APR_INCOMPLETE);
+    }
+
     if (req->body == NULL)
         return NULL;
 
@@ -339,6 +353,8 @@ APREQ_DECLARE(apreq_param_t *) apreq_upload(const apreq_request_t *req,
                                             const char *key)
 {
     apreq_param_t *param = NULL;
+    if (req->cfg->read_ahead)
+        apreq_env_read(req->env, APR_BLOCK_READ, req->cfg->read_ahead);
     if (req->body == NULL)
         return NULL;
     apr_table_do(upload_get, &param, req->body, key, NULL);
